--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body{
 
 
 body{
-    background-color: yellow;
+    background-color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding-top: 0px;
     display: flex;
@@ -24,7 +24,6 @@ height: 50px;
 }
  
 header{
-display: flex;
 background-color: black;
 justify-content: left;
 text-transform: uppercase;
@@ -37,11 +36,21 @@ header a {
 }
 
 #baner{
-    background-color: red ;
+    color: white;
+    align-items: center;
+    background-image: url("kino.jpg");
+    padding: 150px;
+    text-shadow: 2px 2px gray;   
 }
+
+
+h1{
+    font-size: 600%;
+}
+
 .odkazy{
     list-style-type: none ;
-    padding-left: 10pxpx;
+    padding-left: 10px;
 }
 
 .odkazy li{
@@ -54,22 +63,12 @@ form{
 
 .telo{
     padding: 10px;
-    background-color: red;
+    background-color: white;
 }
 
 form td{
     min-width: 200px;
 
-}
-
-#footer{
-    background-color: black;
-    color: white;
-    bottom: 0;
-    width: 100%;
-    position: relative;
-    margin-bottom: 0px;
-    justify-content: end;
 }
 
 a{
@@ -80,7 +79,6 @@ a{
     border: none;
     padding: 10px 10px;
     background-color: 	white;
-    
     border-radius: 20px;
 }
 /*
@@ -101,5 +99,47 @@ a{
 th { 
     position: sticky; 
     top: 0; 
-    background-color: red;
  }
+
+ input, select{
+    background-color: rgb(247, 247, 247);
+    border-color: gray;
+    border-radius: 6px;
+ }
+
+ input{
+    border-color: rgb(180, 180, 180);
+ }
+
+ #nadpis{
+
+ }
+
+ input[type=submit]{
+    margin-top: 10px;
+    border-radius: 10px;
+    width: 100px;
+    background-color: transparent;
+    border-color: gray;
+ }
+
+ input[type=submit]:hover{
+    background-color: rgb(214, 213, 213);
+ }
+
+ @media (max-width: 700px){
+    
+    .odkazy li
+    {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        font-size: 120%;
+    }
+
+    #baner{
+        padding: 100px;
+        
+    }
+    
+}
