--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body{
 
 
 body{
-    background-color: white;
+    background-color: black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding-top: 0px;
     display: flex;
@@ -24,7 +24,7 @@ height: 50px;
 }
  
 header{
-background-color: black;
+background-color: transparent;
 justify-content: left;
 text-transform: uppercase;
 padding-top: 15px;
@@ -64,7 +64,9 @@ form{
 .telo{
     padding: 10px;
     background-color: white;
+    margin: 10px;
 }
+
 
 form td{
     min-width: 200px;
@@ -94,7 +96,13 @@ a{
     color: black !important;
 }
 
+footer ul a{
+    color:white ;
+    }
 
+footer ul a:hover{
+color:rgb(190, 190, 190) ;
+}
 
 th { 
     position: sticky; 
@@ -118,9 +126,10 @@ th {
  input[type=submit]{
     margin-top: 10px;
     border-radius: 10px;
-    width: 100px;
+    width: 60px;
     background-color: transparent;
     border-color: gray;
+    
  }
 
  input[type=submit]:hover{
@@ -138,8 +147,8 @@ th {
     }
 
     #baner{
-        padding: 100px;
-        
+        text-align: justify;
+        font-size: 70%;
     }
     
 }
