--- a/style.css
+++ b/style.css
@@ -39,7 +39,9 @@ header a {
     color: white;
     align-items: center;
     background-image: url("kino.jpg");
-    padding: 150px;
+    background-attachment: fixed;
+    padding-top: 150px;
+    padding-bottom: 150px;
     text-shadow: 2px 2px gray;   
 }
 
@@ -83,6 +85,19 @@ a{
     background-color: 	white;
     border-radius: 20px;
 }
+
+img{
+    width: 300px;
+    border-radius: 5px;
+    padding-bottom: 5px;
+    transition: transform .2s;
+}
+
+img:hover{
+    transform: scale(1.05);
+}
+
+
 /*
 .table>:not(caption)>*>*{
     background-color: red;
@@ -119,9 +134,6 @@ th {
     border-color: rgb(180, 180, 180);
  }
 
- #nadpis{
-
- }
 
  input[type=submit]{
     margin-top: 10px;
@@ -147,8 +159,12 @@ th {
     }
 
     #baner{
-        text-align: justify;
-        font-size: 70%;
+        font-size: 80%;
+        text-align: center;
+    }
+
+    img{
+        width:100%;
     }
     
 }
